--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,7 @@ description: lodash implement by dart, a tiny lodash.
 environment:
   sdk: '>=2.2.0 <3.0.0'
 
-#dependencies:
-#  path: ^1.4.1
+dependencies:
 
 dev_dependencies:
   pedantic: ^1.0.0
